Add webserver and dynamic display updates

--- a/data/index.html
+++ b/data/index.html
@@ -25,7 +25,7 @@
     <div class="w3-container w3-margin w3-card w3-padding-24 w3-border w3-round-large ">
         <h3 class="w3-padding-24">Beer Settings</h3>
         <input type="string" id="beer_name" name="beer_name"  class="w3-button w3-card w3-white w3-xlarge w3-ripple w3-wide"
-        style="width:25%;"> Beer Name</input><br>
+        style="width:150px;"> Beer Name</input><br>
         <input type="number" min="0.9" max="1.6"  required placeholder="[0.9000 - 1.6000] Sg" id="beer_sg" name="beer_sg"  class="w3-button w3-card w3-white w3-xlarge w3-ripple w3-wide"
         style="width:25%;"> Beer Specific Gravity (Sg)</input><br>
         <input type="number" min="0" max="200"  required placeholder="[0 - 200] IBU"  id="beer_ibu" name="beer_ibu"  class="w3-button w3-card w3-white w3-xlarge w3-ripple w3-wide"
